--- a/.gitattributes
+++ b/.gitattributes
@@ -11,6 +11,9 @@
 # Note: This is only used by command line
 ###############################################################################
 #*.cs     diff=csharp
+*.js linguist-language=c#
+*.css linguist-language=c#
+*.html linguist-language=c#
 
 ###############################################################################
 # Set the merge driver for project and solution files
